# aoc_template

./: Cargo.toml  README  README.md
.cargo/: config.toml
src/: day_solver.rs  lib.rs  solver.rs
src/days/: template.rs
src/util/: mod.rs
